--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://anneispilipala.github.io/anneispilipala.com/",
+  "homepage": "https://anneispilipala.github.io/anneispilipala.com/",
   "name": "anne",
   "private": true,
   "version": "0.0.0",
