--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://anne0920.github.io/pilipala/",
-  "name": "anne",
+  "homepage": "https://tingyuliu0920.github.io/pilipala/",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
